# leshy

./: .dockerignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  config.example.toml  flake.nix  watch.sh
.github/workflows/: ci.yml  publish.yml
docs/: openconnect-split-tunnel.md  ssh-tun2socks.md
examples/: main.toml
examples/config.d/: 10-corporate.toml  20-eu-vpn.toml  30-office.toml
src/: config.rs  error.rs  lib.rs  main.rs  reload.rs
src/dns/: cache.rs  handler.rs  mod.rs  server.rs
src/routing/: aggregator.rs  linux.rs  macos.rs  manager.rs  mod.rs
src/service/: linux.rs  macos.rs  mod.rs
src/zones/: matcher.rs  mod.rs
tests/: composable_config_test.rs  corporate_vpn_test.rs  hot_reload_test.rs  integration_test.rs  vpn_integration_test.rs
tests/docker/: Dockerfile.test  conftest.py  docker-compose.yml  test_integration.py
tests/docker/configs/: aggregation.toml  all-fail.toml  basic.toml  cache.toml  corporate-vpn.toml  exclusion-range.toml  exclusive-zone.toml  fallback.toml  multi-zone.toml  servfail-failover.toml  static-routes.toml  upstream-failover.toml  wildcard-pattern.toml  zone-dns.toml
tests/docker/coredns/: Corefile.broken  Corefile.corporate  Corefile.public
tests/fixtures/: test_config.toml
